reciper add fragment oluşturuldu ve düzenlendi

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -9,10 +9,15 @@
         android:id="@+id/searchFragment"
         android:title=""
         android:icon="@drawable/ic_search" />
+    <item
+        android:id="@+id/recipeAddFragment"
+        android:title=""
+        android:icon="@drawable/ic_add" />
 
     <item
         android:id="@+id/profileFragment"
         android:title=""
         android:icon="@drawable/ic_profile" />
+
 
 </menu>
