--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,87 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".profileFragment">
-<LinearLayout
-    android:orientation="vertical"
-    android:id="@+id/hesapAcilmamisGorunum"
-    android:visibility="visible"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    >
-    <TextView
-        android:text="Size daha iyi hizmet verebilmemiz için lütfen giriş yapınız eğer bir hesabınız yoksa üye olunuz"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textAlignment="center"
-        android:layout_margin="32dp"/>
-    <Button
-        android:id="@+id/girisYapUyeOlbutonu"
-        android:layout_width="wrap_content"
-        android:textSize="24sp"
-        android:layout_height="wrap_content"
-        android:text="Giriş Yap / Üye Ol"
-        android:backgroundTint="@color/button"
-        />
 
-
-</LinearLayout>
-
-<LinearLayout
-    android:id="@+id/girisYaptıktanSonrakiGoruntu"
-    android:layout_width="match_parent"
-    android:layout_gravity="center"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:visibility="gone">
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="16dp"
-        android:textAlignment="center"
-        android:layout_gravity="center">
-        <ImageButton
-            android:id="@+id/profilePhoto"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:src="@drawable/ic_profile"
-            android:layout_margin="16dp"
-            android:background="@color/design_default_color_background"/>
-        <TextView
-            android:id="@+id/nickName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nick Name"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:layout_margin="16dp"
-            android:textSize="24sp"
-            />
-
-        <ImageButton
-            android:id="@+id/singOutButton"
-            android:layout_width="135dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:background="@color/design_default_color_background"
-            android:baselineAlignBottom="true"
-            android:src="@drawable/ic_exit" />
-
-
-
-    </LinearLayout>
-    <TextView
+        android:id="@+id/hesapAcilmamisGorunum"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="profile"
-        android:textSize="30sp" />
-</LinearLayout>
+        android:orientation="vertical"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="32dp"
+            android:text="Size daha iyi hizmet verebilmemiz için lütfen giriş yapınız eğer bir hesabınız yoksa üye olunuz"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/girisYapUyeOlbutonu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/button"
+            android:text="Giriş Yap / Üye Ol"
+            android:textSize="24sp" />
 
 
-</FrameLayout>
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/girisYaptıktanSonrakiGoruntu"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
+            android:orientation="horizontal"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageButton
+                android:id="@+id/profilePhoto"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="36dp"
+                android:layout_margin="16dp"
+                android:backgroundTint="@color/black"
+                android:src="@drawable/ic_profile" />
+
+            <TextView
+                android:id="@+id/nickName"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:text="Nick Name"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <ImageButton
+                android:id="@+id/singOutButton"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:background="@color/design_default_color_background"
+                android:src="@drawable/ic_exit" />
+
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="BEĞENİLEN TARİFLER"
+            android:textAlignment="center"
+            android:textSize="25sp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            tools:layout_editor_absoluteX="16dp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
