--- a/app/src/main/res/layout/fragment_recipe_add.xml
+++ b/app/src/main/res/layout/fragment_recipe_add.xml
@@ -12,7 +12,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="50dp"
-        android:src="@drawable/addRecipe"
+        android:src="@drawable/addrecipe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
