--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -25,5 +25,14 @@
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.example.recipeapplication.SearchFragment"
-        android:label="SearchFragment" />
+        android:label="SearchFragment" >
+        <action
+            android:id="@+id/action_searchFragment_to_recipeAddFragment2"
+            app:destination="@id/recipeAddFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/recipeAddFragment"
+        android:name="com.example.recipeapplication.recipeAddFragment"
+        android:label="fragment_recipe_add"
+        tools:layout="@layout/fragment_recipe_add" />
 </navigation>
