--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -13,6 +13,10 @@
         android:id="@+id/recipeAddFragment"
         android:title=""
         android:icon="@drawable/ic_add" />
+    <item
+        android:title=""
+        android:icon="@drawable/ic_tarifler"
+        />
 
     <item
         android:id="@+id/profileFragment"
